[workspace]
resolver = "2"
members = [
    "crates/divi-primitives",
    "crates/divi-crypto",
    "crates/divi-script",
    "crates/divi-consensus",
    "crates/divi-network",
    "crates/divi-storage",
    "crates/divi-wallet",
    "crates/divi-rpc",
    "crates/divi-node",
    "crates/divi-masternode",
    "bin/irondivid",
    "bin/irondivi-cli",
    "tests/integration-tests",
    "tools/cpp-test-extractor",
    "tools/block-comparator",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/DiviDomains/IronDivi"

[workspace.dependencies]
# Internal crates
divi-primitives = { path = "crates/divi-primitives" }
divi-crypto = { path = "crates/divi-crypto" }
divi-script = { path = "crates/divi-script" }
divi-consensus = { path = "crates/divi-consensus" }
divi-network = { path = "crates/divi-network" }
divi-storage = { path = "crates/divi-storage" }
divi-wallet = { path = "crates/divi-wallet" }
divi-rpc = { path = "crates/divi-rpc" }
divi-node = { path = "crates/divi-node" }
divi-masternode = { path = "crates/divi-masternode" }

# Crypto
secp256k1 = { version = "0.29", features = ["recovery", "rand-std"] }
sha2 = "0.10"
ripemd = "0.1"
rand = "0.8"
rand_chacha = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Networking
bytes = "1.11.1"

# Storage
rocksdb = "0.22"

# Web API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.1"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
derive_more = "0.99"
byteorder = "1.5"
chrono = "0.4"

# Testing
proptest = "1.4"
criterion = "0.5"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
