[package]
name = "divi-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core primitive types for Divi blockchain"

[dependencies]
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
derive_more = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "serialization"
harness = false
