[package]
license = "AGPL-3.0-only"
name = "divi-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
divi-primitives = { workspace = true }
divi-storage = { workspace = true }
divi-crypto = { workspace = true }
divi-consensus = { workspace = true }
divi-network = { workspace = true }
divi-wallet = { workspace = true }
divi-script = { workspace = true }
divi-masternode = { workspace = true }
parking_lot = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
base64 = "0.22"
bip39 = "2.0"
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
