[package]
license = "AGPL-3.0-only"
name = "block-comparator"
version = "0.1.0"
edition = "2021"
description = "Compare block validation between Rust and C++ implementations"

[dependencies]
divi-primitives = { path = "../../crates/divi-primitives" }
divi-crypto = { path = "../../crates/divi-crypto" }
divi-consensus = { path = "../../crates/divi-consensus" }
divi-storage = { path = "../../crates/divi-storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
hex = "0.4"
