[package]
license = "AGPL-3.0-only"
name = "cpp-test-extractor"
version = "0.1.0"
edition = "2021"
description = "Extract test vectors from C++ Divi codebase"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
